syntax = "proto3";

package auth_ta_gs;

// Message for the first GS connect to the TA server.
// It will send message like Hello
message GsAuthHelloMessage{}


// Message for the TA server to send the public parameter to the GS
// Including the TA's public key
message TaPublicParameterMessage {
    bytes puk_gs = 1;
}

// Message for the first phase of the authentication protocol
message GsAuthPhase1Message {
    bytes rgid = 1;
    int64 t = 2;
    string hash = 3;
    bytes signature = 4;
    bytes puk_gs = 5;
}

// Message for the second phase of the authentication protocol
// status = 0: success
// status = 1: fail
message GsAuthPhase2Message {
    int32 status = 1;
}

// When auth completed, the TA server will send the UAV list to the GS
// Use the AES-GCM to encrypt the UAV list
message UavListMessage {
    bytes uav_list_enc = 1;
    // bytes uav_list_mac = 2;
}


// Request message
message GsAuthRequest {
    oneof request {
        GsAuthHelloMessage gs_auth_hello = 1;
        GsAuthPhase1Message gs_auth_phase1 = 2;
    }
}

// Response message
message GsAuthResponse {
    oneof response {
        TaPublicParameterMessage ta_public_parameter = 1;
        GsAuthPhase2Message gs_auth_phase2 = 2;
        UavListMessage uav_list = 3;
    }
}